After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 630410 - Menu tree not updated when installing/removing applications
Menu tree not updated when installing/removing applications
Status: RESOLVED FIXED
Product: gnome-menus
Classification: Core
Component: libgnome-menu
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-menus dummy account
gnome-menus dummy account
Depends on:
Blocks:
 
 
Reported: 2010-09-23 13:45 UTC by Mikkel Kamstrup Erlandsen
Modified: 2010-09-23 17:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Code to reproduce the described problem (1.93 KB, text/x-vala)
2010-09-23 13:45 UTC, Mikkel Kamstrup Erlandsen
  Details
Clear one-entry cache on events (488 bytes, patch)
2010-09-23 13:58 UTC, Vincent Untz
committed Details | Review

Description Mikkel Kamstrup Erlandsen 2010-09-23 13:45:24 UTC
Created attachment 170904 [details]
Code to reproduce the described problem

When I install or remove an application the monitors I have installed on it are indeed notified, but the contents of the menu tree does not reflect the new/removed app.

Oddly enough this works fine inside gnome-panel, but my stand alone app doesn't. Please see attached sample code to reproduce the problem.
Comment 1 Vincent Untz 2010-09-23 13:58:02 UTC
Created attachment 170905 [details] [review]
Clear one-entry cache on events

We were simply not clearing the cache containing the list of desktop files when a file got added or removed, meaning that we always got the same list of desktop files.
Comment 2 Mikkel Kamstrup Erlandsen 2010-09-23 14:19:34 UTC
I can confirm that the fix is working here. Thanks a bunch for swift execution Vincent!
Comment 3 Vincent Untz 2010-09-23 17:44:14 UTC
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.